--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ project/plugins/project/
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+# Ignore all .idea
+.idea
+
 # User-specific stuff:
 .idea/**/workspace.xml
 .idea/**/tasks.xml
